src/objects/CntrbnMdl_CaseBacklog__c.object
<CustomObject>
    <description>This object allows you to store the data for cumulative case backlog of each TSE on daily basis</description>
    <fields>
        <fullName>Actual_Backlog__c</fullName>
        <formula>Cumulative_Backlog__c  /  Batch_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Batch Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Backlog__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cumulative Backlog</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CntrbnMdl_CaseBacklogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contribution Model CaseBacklog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Actual_Backlog__c</columns>
        <columns>Batch_Count__c</columns>
        <columns>Cumulative_Backlog__c</columns>
        <columns>Month__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CB-{0000000}</displayFormat>
        <label>CaseBacklog_Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contribution Model CaseBacklogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>